Fixed bug in module initializers that resulted in read-before-write of imported module fields in some cases.